--- a/style/header.css
+++ b/style/header.css
@@ -24,5 +24,11 @@ padding: 0,1em; color: white;
     margin-top: 3em; padding: 1em;
 }
 .texto-desktop, .texto-tablet{
-    
+    display: none;
 }
+@media screen and (min-width: 820px){
+    .container__titulo{
+        font-size: 30px; display: inline-block;}
+}
+    
+
