--- a/style/header.css
+++ b/style/header.css
@@ -30,5 +30,22 @@ padding: 0,1em; color: white;
     .container__titulo{
         font-size: 30px; display: inline-block;}
 }
+.container__titulo{
+    font-weight: 400;
+}
+.texto-tablet{
+    display: block; font-size: 30px; color: bisque;
+    margin-top: 3em; padding: 1em;
+}
+.texto-desktop, .texto-mobile{
+    display: none;
+}
+@media screen and(min-width:1728px){
+    .container__frases{
+        font-size: ;
+    }
+}
+    
+
     
 
